@@ -31,7 +31,15 @@
 	</tr>
 	{SNAPSHOT_ENTRIES}
 	<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
-
+	
+	<tr>
+		<td colspan="2"><b>Pentagram - Experimantal map and shapes viewer for Ultima 8</b></td>
+		<td width="10"></td>
+		<td></td>
+	</tr>
+	{PENTAGRAM_ENTRIES}
+	<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
+	
 	<tr>
 		<td colspan="4"><b>Libraries</b></td>
 	</tr>
